# python-cxx

./: .gitignore  .gitmodules  LICENSE  README.md  example.py  ext_cxx.cpp  ext_cxx.hpp  ext_cxx_test.cpp  meson.build  pyproject.toml
.github/workflows/: build_test_upload.yml  main.yml  python-package.yml  python-publish.yml
buildscripts/: patternfile  stubs.py
scripts/: python_cxx_example.py
src/: _core.cpp  array.cpp
src/ext_cxx/: __init__.py  _core.pyi
src/mod/: binding.cpp  typecaster.cpp  wrapper.cpp
src/python_cxx/: _core.pyi
subprojects/nanobind-2.9.2/docs/: microbenchmark.ipynb
subprojects/nanobind-2.9.2/src/: __init__.py  stubgen.py
subprojects/nanobind-2.9.2/tests/: test_accessor.py  test_chrono.py  test_classes.py  test_eigen.py  test_enum.py  test_functions.py  test_ndarray.py  test_stubs.py
subprojects/nanobind-2.9.2/tests/py_recursive_stub_test/: bar.py
tests/scripts/: test_python_cxx_example.py
