[project]
name = "python-cxx"
version = "0.1.0a2"
description = "C++ DSP Extensions for Python."
readme = "README.md"
authors = [
    { name = "Matthew T. Hunter, Ph.D.", email = "hunter.dsp@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3",
    "nanobind>=2.10.2",
    "benchmarkme>=0.1.0a2",
]

[project.scripts]
python-cxx-example = 'python_cxx_example:main'

[tool.uv]
cache-dir = "./.uv_cache"
reinstall-package = ["ext_cxx._core"]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.{h,c,hpp,cpp,py}" },
    { file = "meson.build" },
]
extra-build-dependencies = { mesonpy = [
    "ninja>=1.13.0",
    "meson>=1.10.0",
    "meson-python>=0.18.0",
    "pip>=25.3",
    "build>=1.3.0",
    "nanobind>=2.10.2",
] }
no-build-isolation-package = ["nanobind"]

[tool.cibuildwheel]
build-frontend = "build[uv]"

[tool.pytest.ini_options]
testpaths = [
    "scripts",
    "src",
    "tests",
]
addopts = [
    "--doctest-modules",
    "--import-mode=importlib"  # Recommended for modern projects
]
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL"
]

[build-system]
requires = ["meson-python>=0.18", "cibuildwheel"]
build-backend = "mesonpy"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
